# egui_widget_ext

./: .gitignore  Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: main_ci.yml  release.yml
examples/: alert_manager.rs  alerts.rs  toast_manager.rs  toasts.rs  toggle_switch.rs
src/: alert.rs  alert_manager.rs  lib.rs  toast.rs  toast_manager.rs  toggle_switch.rs
